Issue #2913364 by jrockowitz: Truncate multiple lines of text with more link when displayed in the Results table

--- a/css/webform.admin.css
+++ b/css/webform.admin.css
@@ -50,11 +50,13 @@
  * @see /admin/structure/webform/manage/contact/results/submissions
  */
 .webform-results__table th,
-.webform-results__table td {
+.webform-results__table td > div {
   max-width: 400px;
-  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-height: 14em;
 }
 
 /* Make sure 'Operations' is never cut-off */
